--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Monitoring Norwegian submissions to SRA samples
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:      # Manual trigger
 
 jobs:
   fetch-and-plot:
