--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Create and activate Conda environment
         run: |
           conda env create -f EBIsearch_environment.yml
+          conda init
           conda activate EBIsearch
           
       - name: Run Python script
