--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,20 +13,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         
-      - name: Set up Conda
-        uses: goanpeca/setup-miniconda@v2
+      - name: Set up Conda environment
+        uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
-          
-      - name: Create and activate Conda environment
         run: |
-          source $CONDA/conda.sh
           conda env create -f EBIsearch_environment.yml
           conda activate EBIsearch
           
       - name: Run Python script
         run: |
-          source $CONDA/conda.sh
           conda activate EBIsearch
           python monitoring_sra-samples_EBIsearch.py
     
