--- a/.github/workflows/conda_test2.yml
+++ b/.github/workflows/conda_test2.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
