--- a/.github/workflows/conda_test2.yml
+++ b/.github/workflows/conda_test2.yml
@@ -16,5 +16,7 @@ jobs:
           auto-update-conda: true
       - name: create environent from file
         run: conda env create -f EBIsearch_environment.yml
+      - name: initiate
+        run: conda init
       - name: activate environment
         run: conda activate EBIsearch
