--- a/.github/workflows/conda_test2.yml
+++ b/.github/workflows/conda_test2.yml
@@ -2,21 +2,21 @@ name: conda test 2
 
 on:
   workflow_dispatch
-  
+
 jobs:
-  test:
-    name: test conda 2
-    runs-on: ubuntu-latest
-    
+  default-shell:
+    name: Default shell
+    runs-on: "ubuntu-latest"
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          auto-update-conda: true
-      - name: create environent from file
-        run: conda env create -f EBIsearch_environment.yml
-      - name: initiate
-        run: conda init
-      - name: activate environment
-        run: conda activate EBIsearch
+          activate-environment: EBIsearch
+          environment-file: EBIsearch_environment.yml
+      - run: conda info
+      - run: conda list
+      - run: conda config --show
+      
