--- a/.github/workflows/conda_test2.yml
+++ b/.github/workflows/conda_test2.yml
@@ -19,4 +19,5 @@ jobs:
       - run: conda info
       - run: conda list
       - run: conda config --show
+      - run: python monitoring_sra-samples_EBIsearch.py
       
