--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0             # otherwise, you will fail to push refs to dest repo
+      - name: Create local changes
+        run: git add stacked_bar_plot.png
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
